# branch_allocator

./: Cargo.toml  LICENSE-MIT  README.md
src/: branch.rs  cursor.rs  lib.rs  target.rs  test.rs
