[package]
name = "branch_allocator"
version = "1.0.4"
authors = ["Tanika Mellifont-Young <tanika.young@proton.me>"]
edition = "2024"
description = "A lock-free buddy allocator for `no_std`."
repository = "https://github.com/ariusha/branch_allocator"
license = "MIT OR Apache-2.0"
keywords = ["memory", "buddy", "lock-free", "allocator", "osdev"]
categories = ["concurrency", "embedded", "memory-management", "no-std::no-alloc", "algorithms"]

[dependencies]